# github-client-ios

./: .gitignore  README.md
GitHubClient/: Avatar.swift  CachedAsyncImage.swift  ContentView.swift  GitHubClientApp.swift  GitHubViewModel.swift  IssuesView.swift  Item.swift  NetworkClient.swift  ProfileView.swift  RepositoriesView.swift  RepositoryDetailsView.swift  StarredListDetailsView.swift  StarredView.swift
GitHubClient.xcodeproj/: project.pbxproj
GitHubClient/Utilities/: ConvertColorHexToRGB.swift
GitHubClient/models/: Follower.swift  GitHubEvent.swift  GitHubProfile.swift  Issue.swift  Item.swift  Organization.swift  Repository.swift  StarredItem.swift  StarredList.swift
GitHubClient/services/: GitHubService.swift
api-github-scraper/: consumer.py  docker-compose.yml  main.py  pyproject.toml
app/GitHubClient/: CachedAsyncImage.swift  ContentView.swift  FollowersView.swift  GitHubClientApp.swift  GitHubViewModel.swift  KeychainManager.swift  NetworkClient.swift  OrganizationsView.swift  ProfileView.swift  RepositoriesView.swift  RepositoryDetailsView.swift  StarredView.swift  TrendingRepositoriesView.swift  ViewDescription.swift
app/GitHubClient/Utilities/: ConvertColorHexToRGB.swift
app/GitHubClientTests/: GitHubClientTests.swift
app/GitHubClientUITests/: GitHubClientUITests.swift  GitHubClientUITestsLaunchTests.swift
backend-service/: developers.py  main.py  marketplace-copilot.py  marketplace-featured.py  pyproject.toml  repositories.py  scrape.py  topics.py
backend-service/app/storage/: news.json
dashboard/: index.html
(+7 files in other folders)
