[project]
name = "backend-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "playwright>=1.52.0",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
